Css fix
It was to much whitespace between the helper-block and the edge.

--- a/interfaces/default/css/stats.css
+++ b/interfaces/default/css/stats.css
@@ -40,3 +40,7 @@ table.networktable {
 #statscmd {
 	margin-top:10px;
 }
+
+.alert.helper-block{
+	margin-bottom: 0px !important;
+}
